--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "cyclic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "env-cmd nodemon index.js",
-    "repl": "env-cmd node"
+    "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "Henrik Leidecker Jørgensen <henrik.joergensen@gmail.com>",
+  "author": "Henrik Leidecker Joergensen <henrik.joergensen@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.16"
   },
   "dependencies": {
     "cyclic-dynamodb": "0.0.21",
-    "env-cmd": "^10.1.0",
-    "express": "^4.18.1"
+    "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1"   
   }
 }
