--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "debug": "~2.6.9",
     "dotenv": "^6.1.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1"   
+    "express": "^4.18.1",
+    "express-openid-connect": "^2.9.0",
+    "http-errors": "~1.8.1",
+    "morgan": "~1.10.0",
+    "strava-v3": "^2.1.0"   
   }
 }
